--- a/templates/music.html
+++ b/templates/music.html
@@ -1,4 +1,22 @@
-<div>
-    <!--displays title-->
-    <h1>{{title}} Page</h1>
+<div class="container vertical-center">
+    <section id="music" class="music-section section text-center">
+        <div class="container">
+            <h2 class="section-title">Music</h2>
+            <div class="sc-block center-block">
+                <div class="item">
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/54872955&amp;color=0E0E10&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                </div><!--//item-->
+                <div class="item">
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/44327523&amp;color=0E0E10&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                </div><!--//item-->
+            </div><!--//sc-block-->
+            <div class="music-action">
+                <a class="btn btn-ghost-primary" href="#">Music on iTunes</a>
+            </div>
+
+                </div><!--//row-->
+            </div><!--//albums-block-->
+            
+        </div><!--//container-->
+    </section><!--//music-section-->      
 </div>
