--- a/templates/theband.html
+++ b/templates/theband.html
@@ -1,4 +1,63 @@
-<div>
-    <!--displays title-->
-    <h1>{{title}} Page</h1>
+<div class="container vertical-center">
+     <section id="about" class="about-section section text-center">
+        <div class="container">
+            <h2 class="section-title">About</h2>
+            <div class="section-intro center-block">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </div>
+            <div class="members-block">
+                <div class="row">
+                    <div class="item col-xs-6 col-md-3">
+                        <div class="item-inner">
+                            <div class="member-profile">
+                                <img class="img-responsive" src="assets/images/mn.jpg" alt="">
+                            </div><!--//member-profile-->
+                            <div class="member-label">Vocals</div>
+                            <h3 class="member-name">
+                                Daniel Contreras
+                            </h3>
+                            
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item col-xs-6 col-md-3">
+                        <div class="item-inner">
+                            <div class="member-profile">
+                                <img class="img-responsive" src="assets/images/md.jpg" alt=""> 
+                            </div><!--//member-profile-->
+                            <div class="member-label">Guitar</div>
+                            <h3 class="member-name">
+                                Tim Wallace
+                            </h3>
+                            
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="clearfix visible-xs"></div>
+                    <div class="item col-xs-6 col-md-3">
+                        <div class="item-inner">
+                            <div class="member-profile">
+                                <img class="img-responsive" src="assets/images/dj.jpg" alt="">
+                                
+                            </div><!--//member-profile-->
+                            <div class="member-label">Bass</div>
+                            <h3 class="member-name">
+                                Andrew Bryant
+                            </h3>
+                           
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                    <div class="item col-xs-6 col-md-3">
+                        <div class="item-inner">
+                            <div class="member-profile">
+                                <img class="img-responsive" src="assets/images/pt.jpg" alt="">
+                                
+                            </div><!--//member-profile-->
+                            <div class="member-label">Drums</div>
+                            <h3 class="member-name">
+                                Ray Anderson
+                            </h3>
+                           
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
+                </div><!--//row-->
+            </div><!--//members-block-->
+        </div><!--//container-->
+    </section><!--//about-section-->
 </div>
